tests/purs/failing/VisibleTypeApplications4.purs
-- @shouldFailWith AmbiguousTypeVariables
module Main where

class Foo foo where
  foo :: String

foo' = foo @_
