tests/purs/failing/VisibleTypeApplications4.out
Error found:
in module [33mMain[0m
at tests/purs/failing/VisibleTypeApplications4.purs:7:1 - 7:14 (line 7, column 1 - line 7, column 14)

  The inferred type
  [33m                                   [0m
  [33m  forall foo15. Foo foo15 => String[0m
  [33m                                   [0m
  has type variables which are not determined by those mentioned in the body of the type:

    [33mfoo15[0m could not be determined

  Consider adding a type annotation.

in value declaration [33mfoo'[0m

See https://github.com/purescript/documentation/blob/master/errors/AmbiguousTypeVariables.md for more information,
or to contribute content related to this error.

